--- a/tools/AnonymiseraIntygsDatabas/pom.xml
+++ b/tools/AnonymiseraIntygsDatabas/pom.xml
@@ -3,16 +3,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>se.inera.certificate</groupId>
+  <groupId>se.inera.certificate.tools</groupId>
   <artifactId>anonymisera-intygsdatabas</artifactId>
-  <version>1.0.3</version>
+  <version>1.0.4</version>
   <name>Anonymisering av intyg</name>
   <packaging>jar</packaging>
 
   <properties>
-    <certificate.version>1.1.3</certificate.version>
-    <groovy.version>2.1.8</groovy.version>
-    <groovy.httpBuilder.version>0.6</groovy.httpBuilder.version>
+    <certificate.version>1.1.6</certificate.version>
+    <groovy.version>2.3.4</groovy.version>
   </properties>
   <distributionManagement>
     <repository>
@@ -108,12 +107,12 @@
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-compiler</artifactId>
-            <version>2.8.0-01</version>
+            <version>2.9.0-01</version>
           </dependency>
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.1.8-01</version>
+            <version>2.3.4-01</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -128,6 +127,7 @@
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+          <appendAssemblyId>false</appendAssemblyId>
         </configuration>
         <executions>
           <execution>
