Gjort om paketeringen av Liquibase runner. Applikationen packas nu i ett arkiv tillsammans med körskript och konfigfil.

--- a/tools/LiquibaseRunnerForCertificate/pom.xml
+++ b/tools/LiquibaseRunnerForCertificate/pom.xml
@@ -20,35 +20,52 @@
   </properties>
 
   <dependencies>
-
-      <dependency>
-          <groupId>se.inera.certificate</groupId>
-          <artifactId>liquibase-runner</artifactId>
-          <version>${certificate.runner.version}</version>
-      </dependency>
-
-      <dependency>
-          <groupId>se.inera.certificate</groupId>
-          <artifactId>persistence</artifactId>
-          <version>${project.version}</version>
-      </dependency>
-
+    <dependency>
+      <groupId>se.inera.certificate</groupId>
+      <artifactId>liquibase-runner</artifactId>
+      <version>${certificate.runner.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>se.inera.certificate</groupId>
+      <artifactId>persistence</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>se.inera.certificate.liquibase.Runner</mainClass>
+                </transformer>
+              </transformers>
+              <artifactSet>
+                <excludes>
+                  <exclude>se.inera.certificate:schemas</exclude>
+                  <exclude>se.inera.certificate.modules:*</exclude>
+                  <exclude>org.springframework:*</exclude>
+                  <exclude>org.hibernate.*:*</exclude>
+                  <exclude>org.jadira.usertype:*</exclude>
+                  <exclude>com.google.guava:*</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>se.inera.certificate.liquibase.Runner</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
         <executions>
           <execution>
             <id>make-assembly</id>
@@ -56,6 +73,9 @@
             <goals>
               <goal>single</goal>
             </goals>
+            <configuration>
+              <descriptor>src/main/assembly/manifest.xml</descriptor>
+            </configuration>
           </execution>
         </executions>
       </plugin>
