INTYG-1170 Skicka revoke till mottagare av intyg.
Revoke skickas nu till alla mottagare som tidigare fått intyget skickat
till sig.

--- a/web/src/main/resources/default.test.properties
+++ b/web/src/main/resources/default.test.properties
@@ -12,6 +12,7 @@ ntjp.ws.truststore.password =
 registermedicalcertificatev3.endpoint.url = http://localhost:8080/inera-certificate/register-medical-certificate-stub
 registercertificatev1.endpoint.url = http://localhost:8080/inera-certificate/register-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url=http://localhost:8080/inera-certificate/send-certificate-question-stub
+revokemedicalcertificatev1.endpoint.url = http://localhost:8080/inera-certificate/revoke-medical-certificate-stub
 
 # Logical address for FK
 revokecertificate.address.fk7263 = FK
