--- a/tools/Migrering/dataSource.properties
+++ b/tools/Migrering/dataSource.properties
@@ -2,7 +2,7 @@ dataSource.url=jdbc:mysql://localhost:3306/intyg?useCompression=true
 dataSource.driver=com.mysql.jdbc.Driver
 dataSource.username=intyg_user
 dataSource.password=intyg_pass
-#datasource.url=jdbc:h2:tcp://localhost:9092/mem:dataSource
+#dataSource.url=jdbc:h2:tcp://localhost:9092/mem:dataSource
 #dataSource.driver=org.h2.Driver
 #dataSource.username=sa
 #dataSource.password=
