--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>certificate</artifactId>
     <groupId>se.inera.certificate</groupId>
+    <artifactId>certificate</artifactId>
     <version>1.3-SNAPSHOT</version>
   </parent>
 
@@ -12,12 +12,23 @@
   <name>Inera Certificate Schemas</name>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <schema.path>${basedir}/src/main/resources/schemas</schema.path>
     <target.path>${basedir}/target/generated/src/main/java</target.path>
     <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
   </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>integration-util</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>module-support</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-frontend-jaxws</artifactId>
@@ -32,18 +43,20 @@
     </dependency>
 
     <dependency>
-      <groupId>se.inera.certificate.modules</groupId>
-      <artifactId>integration-util</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>se.inera.certificate.modules</groupId>
-      <artifactId>module-support</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-jaxb-annotations</artifactId>
+    </dependency>
+
+    <!-- Dependencies used in test phase -->
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -51,16 +64,6 @@
       <artifactId>xmlunit</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.skyscreamer</groupId>
-      <artifactId>jsonassert</artifactId>
-      <version>1.2.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.module</groupId>
-      <artifactId>jackson-module-jaxb-annotations</artifactId>
-    </dependency>
   </dependencies>
 
   <build>
@@ -68,7 +71,7 @@
       <plugin>
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-codegen-plugin</artifactId>
-        <version>${cxf.version}</version>
+    
         <executions>
           <execution>
             <id>wsdl2java-external-interfaces</id>
@@ -549,9 +552,10 @@
           <dependency>
             <groupId>org.jvnet.jaxb2_commons</groupId>
             <artifactId>jaxb2-basics</artifactId>
-            <version>0.6.4</version>
+            <version>${jaxb.commons.version}</version>
           </dependency>
         </dependencies>
+
       </plugin>
     </plugins>
   </build>
