--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -2,63 +2,69 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <groupId>se.inera.certificate</groupId>
     <artifactId>certificate</artifactId>
     <version>1.3-SNAPSHOT</version>
   </parent>
+  
   <artifactId>certificate-specifications</artifactId>
   <packaging>jar</packaging>
   <name>Inera Certificate FitNesse specifications</name>
 
   <properties>
-    <groovy.version>2.3.4</groovy.version>
-    <groovy.httpBuilder.version>0.6</groovy.httpBuilder.version>
+    <certificate.baseUrl>http://localhost:8080/inera-certificate/</certificate.baseUrl>
+    <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
+
     <fitnesse.port>9123</fitnesse.port>
     <fitnesse.working>${project.basedir}/src/test/fitnesse</fitnesse.working>
     <fitnesse.root>FitNesseRoot</fitnesse.root>
     <fitnesse.project.root>IneraCertificate</fitnesse.project.root>
     <fitnesse.suite>${fitnesse.project.root}.TestPlan.RegressionsTester</fitnesse.suite>
+
     <!-- This example has no unit tests, just integration tests -->
     <skipTests>true</skipTests>
-    <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
-    <certificate.baseUrl>http://localhost:8080/inera-certificate/</certificate.baseUrl>
   </properties>
 
   <dependencies>
 
     <dependency>
-      <groupId>org.fitnesse</groupId>
-      <artifactId>fitnesse</artifactId>
-      <version>20131110</version>
-    </dependency>
-
-    <dependency>
       <groupId>se.inera.certificate</groupId>
       <artifactId>model</artifactId>
     </dependency>
-
-      <dependency>
-          <groupId>se.inera.certificate</groupId>
-          <artifactId>persistence</artifactId>
-          <version>1.3-SNAPSHOT</version>
-      </dependency>
-
-      <dependency>
+    <dependency>
+      <groupId>se.inera.certificate</groupId>
+      <artifactId>persistence</artifactId>
+    </dependency>
+    <dependency>
       <groupId>se.inera.certificate</groupId>
       <artifactId>schemas</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
-      <version>${groovy.version}</version>
+      <groupId>javax.jms</groupId>
+      <artifactId>jms-api</artifactId>
+    </dependency>
+            
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-client</artifactId>
     </dependency>
 
     <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+    </dependency>
+    
+    <dependency>
       <groupId>org.codehaus.groovy.modules.http-builder</groupId>
       <artifactId>http-builder</artifactId>
-      <version>${groovy.httpBuilder.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.codehaus.groovy</groupId>
@@ -68,14 +74,13 @@
     </dependency>
 
     <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
+      <groupId>org.fitnesse</groupId>
+      <artifactId>fitnesse</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
-      <version>1.2.0</version>
       <exclusions>
         <exclusion>
           <groupId>commons-collections</groupId>
@@ -85,22 +90,11 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.jms</groupId>
-      <artifactId>jms-api</artifactId>
-      <version>1.1</version>
-    </dependency>
-
-    <dependency>
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
       <scope>compile</scope>
     </dependency>
-            
-    <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-client</artifactId>
-      <version>5.8.0</version>
-    </dependency>
+    
   </dependencies>
 
   <build>
@@ -115,18 +109,17 @@
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-compiler</artifactId>
-            <version>2.9.0-01</version>
+            <version>${groovy-eclipse-compiler.version}</version>
           </dependency>
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.3.4-01</version>
+            <version>${groovy-eclipse-batch.version}</version>
           </dependency>
         </dependencies>
       </plugin>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.5</version>
         <configuration>
           <filesets>
             <fileset>
@@ -147,7 +140,7 @@
       <plugin>
         <groupId>uk.co.javahelp.fitnesse</groupId>
         <artifactId>fitnesse-launcher-maven-plugin</artifactId>
-        <version>1.4.1</version>
+        <version>${fitnesse-launcher-maven-plugin.version}</version>
         <configuration>
           <port>${fitnesse.port}</port>
           <workingDir>${fitnesse.working}</workingDir>
@@ -160,39 +153,7 @@
         </configuration>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings
-          only. It has no influence on the Maven build itself. -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <versionRange>[2.0,)</versionRange>
-                    <goals>
-                      <goal>compile</goal>
-                      <goal>testCompile</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <configurator>
-                      <id>org.eclipse.m2e.jdt.javaConfigurator</id>
-                    </configurator>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    
   </build>
 
   <profiles>
@@ -214,6 +175,7 @@
           <certificate.baseUrl>http://localhost:18080/inera-certificate/</certificate.baseUrl>
         </properties>
     </profile>
+    
     <profile>
       <id>wiki</id>
       <!--
@@ -238,6 +200,7 @@
         </plugins>
       </build>
     </profile>
+    
     <profile>
       <id>auto</id>
       <!--
