--- a/web/pom.xml
+++ b/web/pom.xml
@@ -19,23 +19,50 @@
   </properties>
 
   <dependencies>
-
+    <!-- Projects dependencies -->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>module-api</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>persistence</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>schemas</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>logback-util</artifactId>
+    </dependency>
+    
+    <!-- Dependencies to Intygstjansten-modules -->
+    <dependency>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>module-support</artifactId>
+    </dependency>
     <dependency>
       <groupId>se.inera.certificate.modules</groupId>
       <artifactId>fk7263</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>se.inera.certificate.modules</groupId>
       <artifactId>ts-bas</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>se.inera.certificate.modules</groupId>
       <artifactId>ts-diabetes</artifactId>
-      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
     </dependency>
 
     <dependency>
@@ -48,26 +75,31 @@
     </dependency>
 
     <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>persistence</artifactId>
-        <version>1.3-SNAPSHOT</version>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jms_1.1_spec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
     </dependency>
     <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>schemas</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>se.inera.certificate.modules</groupId>
-      <artifactId>module-support</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>module-api</artifactId>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -83,51 +115,12 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-aop</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-jms</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjrt</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjweaver</artifactId>
     </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>se.inera.certificate</groupId>
-      <artifactId>logback-util</artifactId>
-      <version>1.1.2</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -138,12 +131,11 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jms_1.1_spec</artifactId>
-      <version>1.1.1</version>
-      <scope>provided</scope>
+      <groupId>xmlunit</groupId>
+      <artifactId>xmlunit</artifactId>
     </dependency>
   </dependencies>
+
   <build>
     <finalName>inera-certificate</finalName>
     <resources>
@@ -166,7 +158,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.3</version>
         <executions>
           <execution>
             <phase>validate</phase>
@@ -182,6 +173,7 @@
       </plugin>
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <id>jetty</id>
@@ -190,7 +182,6 @@
           <plugin>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>9.1.1.v20140108</version>
             <configuration>
               <webAppConfig>
                 <contextPath>/inera-certificate</contextPath>
@@ -235,42 +226,36 @@
               <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.3.171</version>
               </dependency>
               <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.24</version>
               </dependency>
               <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-broker</artifactId>
-                <version>${activemq.version}</version>
               </dependency>
               <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-kahadb-store</artifactId>
-                <version>${activemq.version}</version>
               </dependency>
               <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-jms_1.1_spec</artifactId>
-                <version>1.1.1</version>
               </dependency>
             </dependencies>
           </plugin>
         </plugins>
       </build>
+      
       <dependencies>
         <dependency>
           <groupId>org.apache.activemq</groupId>
           <artifactId>activemq-client</artifactId>
-          <version>${activemq.version}</version>
         </dependency>
         <dependency>
           <groupId>org.apache.activemq</groupId>
           <artifactId>activemq-broker</artifactId>
-          <version>${activemq.version}</version>
         </dependency>
       </dependencies>
     </profile>
